add_library(clua
lapi.c      lcode.c     ldblib.c  ldump.c  linit.c   lmathlib.c  lobject.c   lparser.c  lstrlib.c  ltm.c       lvm.c
lauxlib.c   lcorolib.c  ldebug.c  lfunc.c  liolib.c  lmem.c      lopcodes.c  lstate.c   ltable.c   lundump.c   lzio.c
lbaselib.c  lctype.c    ldo.c     lgc.c    llex.c    loadlib.c   loslib.c    lstring.c  ltablib.c  lutf8lib.c
)
